--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
 
 <body>
     <div class="container">
-   
+   <header>
+       <nav>
+           <img src="img\lambda-black.png" alt="Lambda School logo">
+           <div class="links">
+                <a href="#">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </div>
+       </nav>
+   </header>
+        <section class="jumbo">
+        </section>
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
